kinetic brand line - fix JS & update spacing and layout on mobile

--- a/foundation_cms/static/scss/components/home_page/kinetic_type_wordmark.scss
+++ b/foundation_cms/static/scss/components/home_page/kinetic_type_wordmark.scss
@@ -6,10 +6,6 @@
   margin-top: 2rem;
   margin-bottom: 1rem;
 
-  @include breakpoint(large up) {
-    margin-bottom: 2rem;
-  }
-
   &__svg {
     $base-animation-duration: 1s;
     $fill-colors: (
